--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="viewer-wrap" id="viewerWrap">
       <!-- model-viewer element. Replace src with your .glb path. Add ios-src if needed for USDZ -->
-      <model-viewer id="mv" src="assets/burger.glb" alt="Classic Burger" ar ar-modes="webxr scene-viewer quick-look" camera-controls auto-rotate environment-image="neutral" exposure="1" shadow-intensity="1"></model-viewer>
+      <model-viewer id="mv" src="assets/burger_tripo-v2.glb" alt="Classic Burger" ar ar-modes="webxr scene-viewer quick-look" camera-controls auto-rotate environment-image="neutral" exposure="1" shadow-intensity="1"></model-viewer>
 
       <div class="controls">
         <div class="thumbs" id="thumbs">
@@ -65,7 +65,7 @@
           <div class="thumb" data-src="assets/pizza.glb" data-title="Margherita Pizza" data-price="₹299" data-desc="Wood-fired, basil, mozzarella." aria-label="pizza">
             <img src="thumbs/pizza.jpg" alt="Pizza thumb">
           </div>
-          <div class="thumb" data-src="assets/cola.glb" data-title="Cold Cola" data-price="₹79" data-desc="Chilled, bubbly—perfect with meals." aria-label="cola">
+          <div class="thumb" data-src="assets/burger_tripo-v2.glb" data-title="Cold Cola" data-price="₹79" data-desc="Chilled, bubbly—perfect with meals." aria-label="cola">
             <img src="thumbs/cola.jpg" alt="Cola thumb">
           </div>
         </div>
