--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 
       <div class="controls">
         <div class="thumbs" id="thumbs">
-          <div class="thumb active" data-src="assets/burger.glb" data-title="Classic Cheeseburger" data-price="₹199" data-desc="Juicy patty, melted cheese, fresh lettuce." aria-label="burger">
-            <img src="thumbs/burger.jpg" alt="Burger thumb">
+          <div class="thumb active" data-src="assets/burger_tripo-v2.glb" data-title="Classic Cheeseburger" data-price="₹199" data-desc="Juicy patty, melted cheese, fresh lettuce." aria-label="burger">
+            <img src="assets/OIP.jpeg" alt="Burger thumb">
           </div>
           <div class="thumb" data-src="assets/pizza.glb" data-title="Margherita Pizza" data-price="₹299" data-desc="Wood-fired, basil, mozzarella." aria-label="pizza">
             <img src="thumbs/pizza.jpg" alt="Pizza thumb">
           </div>
-          <div class="thumb" data-src="assets/burger_tripo-v2.glb" data-title="Cold Cola" data-price="₹79" data-desc="Chilled, bubbly—perfect with meals." aria-label="cola">
+          <div class="thumb" data-src="assets/pasta.glb" data-title="Cold Cola" data-price="₹79" data-desc="Chilled, bubbly—perfect with meals." aria-label="cola">
             <img src="thumbs/cola.jpg" alt="Cola thumb">
           </div>
         </div>
