--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <div class="thumb" data-src="assets/pizza.glb" data-title="Margherita Pizza" data-price="₹299" data-desc="Wood-fired, basil, mozzarella." aria-label="pizza">
             <img src="thumbs/pizza.jpg" alt="Pizza thumb">
           </div>
-          <div class="thumb" data-src="assets/pasta.glb" data-title="Cold Cola" data-price="₹79" data-desc="Chilled, bubbly—perfect with meals." aria-label="cola">
-            <img src="thumbs/cola.jpg" alt="Cola thumb">
+          <div class="thumb" data-src="assets/pasta.glb" data-title="Hot Pasta" data-price="₹129" data-desc="Hot, bubbly—perfect with meals." aria-label="cola">
+            <img src="thumbs/pasta.jpg" alt="Pasta thumb">
           </div>
         </div>
 
